--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">کال ریکارڈر</string>
-    <string name="app_name_full">کال ریکارڈر</string>
+    <string name="app_name">"آٹو کال ریکارڈر"</string>
+    <string name="app_name_full">"آٹو کال ریکارڈر"</string>
     <string name="pref_header_general">جنرل</string>
     <string name="pref_header_about">کے بارے میں</string>
     <string name="pref_call_recording_name">کال ریکارڈنگ</string>
